# wapc_playground

./: readme.md
cuckoo_wapc_rust/: Cargo.toml  readme.md  schema.widl
cuckoo_wapc_rust/src/: generated.rs
wapc_cuckoo_rust/: Cargo.toml  readme.md  schema.widl
wapc_cuckoo_rust/src/: generated.rs  lib.rs
wapc_hello_tinygo/: Makefile  codegen.yaml  go.mod  readme.md
wapc_hello_tinygo/pkg/: main.go
wapc_hello_tinygo/pkg/module/: module.go
wapc_host_go/: .gitignore  go.mod  go.sum  main.go  readme.md
wapc_host_node/: package-lock.json  package.json  readme.md  wapc.js
wapc_host_rust/: Cargo.toml  readme.md
wapc_host_rust/src/: main.rs
