[package]
authors = ["marius.ileana@gmail.com"]
description = "A cuckoo filter in Rust, packaged as a waPC Guest (WASM module)"
edition = "2021"
license = "Apache-2.0"
name = "wapc_cuckoo_rust"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["guest"]
guest = []

[dependencies]
cuckoofilter = "0.5"
lazy_static = "1.4.0"
rmp-serde = "1.1.0"
serde = {version = "1.0.115", features = ["derive"]}
serde_bytes = "0.11.5"
serde_derive = "1.0.115"
serde_json = "1.0.57"
wapc-guest = "1.0.0"

[dev-dependencies]
base64 = "0.13.0"
serde_json = "1.0.57"
structopt = "0.3.17"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
