[package]
edition = "2021"
name = "wapc_host_rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.41"
serdeconv = "0.4.0"
wapc = "0.10.1"
wascc-codec = "0.9.1"
wasmtime = "0.24.0"
wasmtime-provider = "0.0.3"
wasmtime-wasi = "0.24.0"

[dev-dependencies]
env_logger = "0.8.3"
wascc-codec = "0.9.1"
